2006-12-04  Brian Cameron  <brian.cameron@sun.com>

        * vicious-extensions/ve-miscui.c, gui/gdmchooser.c: Fix so
          that if the "%" key is entered in the input field in
          gdmchooser, the secondary message in the error dialog
          displays properly.  Also fix ve-miscui.c so that if "%"
          exists in the secondary message, to not display it.
          Message must have "%%" to display the "%" character.

2006-10-05  Brian Cameron  <brian.cameron@sun.com>

        * daemon/auth.c: Set authdir to NULL after freeing to avoid accessing
          an invalid pointer.  Fixes bug #359831.  Patch provided by
          Amnon Aaronsohn <bla@cs.huji.ac.il>.

2006-08-03  Ray Strode  <rstrode@redhat.com>

	* configure.ac: look for /usr/bin/Xorg when searching or
	  X servers (bug 349836).

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: Remove calls to syslog/malloc that are called
	  from inside signal handlers, since they are not safe.  Patch
	  provided by Ray Strode <rstrode@redhat.com>.

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf.in, config/gdm.conf-custom: Improved comments
	  to make gdm.conf/custom.conf more clear.

2006-08-02  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Fix error message that gets printed when
	  you try to run GDM as non-root user.
	* gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_canvas_item.c,
	  gui/greeter/greeter_session.c,
	  gui/greeter/greeter_system.c: I think this time I finally fixed
	  the focus management in gdmgreeter so that when using the Options
	  button the focus remains in the entry.
	* gui/greeter/greeter_parser.c: Only free the hash table if it
	  is not-NULL.

2006-07-31  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.10: 
	* NEWS: Updated.
	* configure.ac: Update to new release version.

2006-07-31  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.c: Fix gdm_common_setup_blinking so it doesn't