@@ -1,3 +1,8 @@
+2006-12-05  Brian Cameron  <brian.cameron@sun.com>
+
+        * vicious-extensions/ve-miscui.c, gui/gdmchooser.c: Cleaner
+          fix for same problem fixed in last commit.
+
 2006-12-04  Brian Cameron  <brian.cameron@sun.com>
 
         * vicious-extensions/ve-miscui.c, gui/gdmchooser.c: Fix so
